Client: reorganización, limpieza y documentación

--- a/client/src/assets/css/materialicons.css
+++ b/client/src/assets/css/materialicons.css
@@ -1,3 +1,6 @@
+/* Esto debería descargarse desde npm en lugar de tener este archivo,
+supongo que hubo un problema al intentarlo y encontré esta solución temporal*/
+
 /* fallback */
 @font-face {
   font-family: 'Material Icons';
